Reset default values

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 				<label id="currentLayerLabel" class="input-group-addon" for="currentLayer">
 					Current Layer
 				</label>
-				<input id="currentLayer" class="form-control input1" type="text" name="currentLayer" value="4">
+				<input id="currentLayer" class="form-control input1" type="text" name="currentLayer" value="">
 			</div>
 			<div class="panel-body input-group">
 				<label id="targetLayerLabel" class="input-group-addon" for="targetLayer">
 					Target Layer
 				</label>
-				<input id="targetLayer" class="form-control input1" type="text" name="targetLayer" value="22">
+				<input id="targetLayer" class="form-control input1" type="text" name="targetLayer" value="">
 			</div>
 			<div class="panel-body input-group">
 				<label id="targetPointsLabel" class="input-group-addon" for="targetPoints">
 					Target Points
 				</label>
-				<input id="targetPoints" class="form-control input1" type="text" name="targetPoints" value="275">
+				<input id="targetPoints" class="form-control input1" type="text" name="targetPoints" value="">
 			</div>
 			<div class="panel-body input-group">
 				<label id="precisionLabel" class="input-group-addon" for="precision">
 					Precision
 				</label>
-				<input id="precision" class="form-control input1" type="text" name="precision" value="5">
+				<input id="precision" class="form-control input1" type="text" name="precision" value="">
 			</div>
 			<div class="panel-body input-group">
 				<div class="input-group-btn">
