--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<label id="precisionLabel" class="input-group-addon" for="precision">
 					Precision
 				</label>
-				<input id="precision" class="form-control input1" type="text" name="precision" value="">
+				<input id="precision" class="form-control input1" type="text" name="precision" value="5">
 			</div>
 			<div class="panel-body input-group">
 				<div class="input-group-btn">
