--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 	<script src="index.js"></script>
 </head>
 <body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="collapse navbar-collapse" id="nav-collapsable-content">
+				<ul class="nav navbar-nav">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Incremental Adventures<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="https://www.kongregate.com/games/Gniller/incremental-adventures">Incremental Adventures</a></li>
+							<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Extension</a></li>
+							<li><a href="https://equeline.github.io/">Layer Prestige Points Calculation</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<div class="container">
 		<h2 id="title" class="page-header">Incremental Adventure Layer Prestige Points calculation</small></h2>
 		<div class="panel panel-primary">
