--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 		<div class="panel panel-primary">
 			<div class="panel-heading">Calculates amount of points needed to unlock new layers. Put your max available layer in "Current Layer", layer you want to unlock in "Target Layer", amount of points you need in "Target Points".</div>
 			<div class="panel-body input-group">
-				<label id="currentLayerLabel" class="input-group-addon" for="currentLayer">
-					Current Layer
-				</label>
+				<label id="currentLayerLabel" class="input-group-addon" for="currentLayer">Current Layer</label>
 				<input id="currentLayer" class="form-control input1" type="text" name="currentLayer" value="">
 			</div>
 			<div class="panel-body input-group">
@@ -44,15 +42,11 @@
 				<input id="targetLayer" class="form-control input1" type="text" name="targetLayer" value="">
 			</div>
 			<div class="panel-body input-group">
-				<label id="targetPointsLabel" class="input-group-addon" for="targetPoints">
-					Target Points
-				</label>
+				<label id="targetPointsLabel" class="input-group-addon" for="targetPoints">Target Points</label>
 				<input id="targetPoints" class="form-control input1" type="text" name="targetPoints" value="">
 			</div>
 			<div class="panel-body input-group">
-				<label id="precisionLabel" class="input-group-addon" for="precision">
-					Precision
-				</label>
+				<label id="precisionLabel" class="input-group-addon" for="precision">Precision</label>
 				<input id="precision" class="form-control input1" type="text" name="precision" value="5">
 			</div>
 			<div class="panel-body input-group">
