New page: QoL isntallation instructions for other browsers

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Incremental Adventures<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="https://www.kongregate.com/games/Gniller/incremental-adventures">Incremental Adventures</a></li>
-							<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Extension</a></li>
+							<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Chrome Extension</a></li>
+							<li><a href="https://equeline.github.io/QoL">QoL for other browsers</a></li>
 							<li><a href="https://equeline.github.io/">Layer Prestige Points Calculation</a></li>
 						</ul>
 					</li>
