--- a/QoL/index.html
+++ b/QoL/index.html
@@ -15,15 +15,12 @@
 		<div class="container-fluid">
 			<div class="collapse navbar-collapse" id="nav-collapsable-content">
 				<ul class="nav navbar-nav">
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span style='color:#FFFFCC; font-weight:bold;'>Incremental Adventures Tools<span class="caret"></span></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="https://www.kongregate.com/games/Gniller/incremental-adventures">Incremental Adventures</a></li>
-							<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Chrome Extension</a></li>
-							<li><a href="https://equeline.github.io/QoL">QoL for other browsers</a></li>
-							<li><a href="https://equeline.github.io/">Layer Prestige Points Calculation</a></li>
-						</ul>
-					</li>
+					<ul class="nav navbar-nav">
+					<li><a href="https://www.kongregate.com/games/Gniller/incremental-adventures">Incremental Adventures</a></li>
+					<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Chrome Extension</a></li>
+					<li><a href="https://equeline.github.io/QoL">QoL for other browsers</a></li>
+					<li><a href="https://equeline.github.io/">Layer Prestige Points Calculation</a></li>
+				</ul>
 				</ul>
 			</div>
 		</div>
