Added Ascension points calculator

--- a/QoL/index.html
+++ b/QoL/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Incremental Adventure Layer Prestige Points calculation</title>
+	<title>Incremental Adventure Layer Points calculation</title>
 	<link rel="stylesheet" href="../lib/bootstrap.min.css">
 	<link rel="stylesheet" href="index.css">
 	
@@ -19,7 +19,7 @@
 					<li><a href="https://www.kongregate.com/games/Gniller/incremental-adventures">Incremental Adventures</a></li>
 					<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Chrome Extension</a></li>
 					<li><a href="https://equeline.github.io/QoL">QoL for other browsers</a></li>
-					<li><a href="https://equeline.github.io/">Layer Prestige Points Calculation</a></li>
+					<li><a href="https://equeline.github.io/">Prestige/Ascension calculator</a></li>
 				</ul>
 				</ul>
 			</div>
