Added support for URL parameters

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	<div class="container">
 		<h2 id="title" class="page-header">Incremental Adventure Prestige/Ascension calculator</small></h2>
 		<div class="tab">
-			<button class="tablinks active" onclick="openTab(event, 'Prestige');">Prestige layers</button>
-			<button class="tablinks" onclick="openTab(event, 'Ascension');">Ascension points</button>
+			<button id="prestigeLayersButton" class="tablinks active" onclick="openTab(event, 'Prestige');">Prestige layers</button>
+			<button id="ascensionLayersButton" class="tablinks" onclick="openTab(event, 'Ascension');">Ascension points</button>
 		</div>
 		<div id="Prestige" class="tabcontent" style="display:block;">
 			<div class="panel panel-primary">		
