--- a/QoL/index.html
+++ b/QoL/index.html
@@ -19,8 +19,8 @@
 					<li><a href="https://www.kongregate.com/games/Gniller/incremental-adventures">Incremental Adventures</a></li>
 					<li><a href="https://equeline.github.io/">Prestige/Ascension calculator</a></li>
 					<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Chrome Extension</a></li>
-					<li><a href="https://openuserjs.org/scripts/eQueline/IA_QoL">QoL Greasemokey script</a></li>
-					<li><a href="https://equeline.github.io/QoL">Script manual isntallation</a></li>
+					<li><a href="https://openuserjs.org/scripts/eQueline/IA_QoL">QoL Tampermonkey script</a></li>
+					<li><a href="https://equeline.github.io/QoL">Script manual installation</a></li>
 				</ul>
 				</ul>
 			</div>
