Fixed rpdr not loading from save. Updated numbers lib

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				</div-->
 				<div class="panel-body input-group">
 					<div class="input-group-btn">
-						<button id="calculate" class="btn btn-success" type="button" onclick="calculateAscension();">Calculate</button>
+						<button id="calculateAscension" class="btn btn-success" type="button" onclick="calculateAscension();">Calculate</button>
 					</div>
 				</div>
 			</div>
