Improved approximation of layer/level for ascension calculation. Links and description changes

--- a/QoL/index.html
+++ b/QoL/index.html
@@ -15,13 +15,11 @@
 		<div class="container-fluid">
 			<div class="collapse navbar-collapse" id="nav-collapsable-content">
 				<ul class="nav navbar-nav">
-					<ul class="nav navbar-nav">
 					<li><a href="https://www.kongregate.com/games/Gniller/incremental-adventures">Incremental Adventures</a></li>
-					<li><a href="https://equeline.github.io/">Prestige/Ascension calculator</a></li>
-					<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Chrome Extension</a></li>
-					<li><a href="https://openuserjs.org/scripts/eQueline/IA_QoL">QoL Tampermonkey script</a></li>
+					<li><a href="https://equeline.github.io/">Prestige/Ascension points calculator</a></li>
+					<li><a href="https://openuserjs.org/scripts/eQueline/IA_QoL">IA QoL Tampermonkey script</a></li>
 					<li><a href="https://equeline.github.io/QoL">Script manual installation</a></li>
-				</ul>
+					<li><a href="https://chrome.google.com/webstore/detail/incremental-adventures-qo/hibaleheefjghhphocdkdofgpcaihjdh">QoL Chrome Extension (outdated)</a></li>
 				</ul>
 			</div>
 		</div>
